Add Dudley's book on real analysis

--- a/All.bib
+++ b/All.bib
@@ -14492,6 +14492,22 @@
   mrreviewer	= {Denis R. Bell}
 }
 
+@Book{		  dudley:02:real,
+  author	= {Dudley, R. M.},
+  title		= {Real analysis and probability},
+  series	= {Cambridge Studies in Advanced Mathematics},
+  volume	= {74},
+  note		= {Revised reprint of the 1989 original},
+  publisher	= {Cambridge University Press, Cambridge},
+  year		= {2002},
+  pages		= {x+555},
+  isbn		= {0-521-00754-2},
+  mrclass	= {60-01 (00A05 28-01 46-01 54-01)},
+  mrnumber	= {1932358},
+  doi		= {10.1017/CBO9780511755347},
+  url		= {https://doi.org/10.1017/CBO9780511755347}
+}
+
 @Article{	  dudley:67:sizes,
   author	= {Dudley, R. M.},
   title		= {The sizes of compact subsets of {H}ilbert space and
@@ -17227,6 +17243,18 @@
   mrclass	= {35.00 (35.62)},
   mrnumber	= {0181836},
   mrreviewer	= {B. Frank Jones, Jr.}
+}
+
+@Book{		  friedman:90:principles,
+  author	= {Friedman, Bernard},
+  title		= {Principles and techniques of applied mathematics},
+  note		= {Reprint of the 1956 original},
+  publisher	= {Dover Publications, Inc., New York},
+  year		= {1990},
+  pages		= {x+315},
+  isbn		= {0-486-66444-9},
+  mrclass	= {00A05 (01A75)},
+  mrnumber	= {1088252}
 }
 
 @Article{	  fritz.rudiger:95:time,
@@ -24948,6 +24976,19 @@
   mrreviewer	= {S. W. Graham}
 }
 
+@Book{		  keener:00:principles,
+  author	= {Keener, James P.},
+  title		= {Principles of applied mathematics},
+  edition	= {Revised},
+  note		= {Transformation and approximation},
+  publisher	= {Perseus Books, Advanced Book Program, Cambridge, MA},
+  year		= {2000},
+  pages		= {xx+603},
+  isbn		= {0-7382-0129-4},
+  mrclass	= {00A05},
+  mrnumber	= {1741517}
+}
+
 @Article{	  kemp.nourdin.ea:12:wigner,
   author	= {Kemp, Todd and Nourdin, Ivan and Peccati, Giovanni and
 		  Speicher, Roland},
@@ -28301,6 +28342,18 @@
   mrreviewer	= {Edward C. Waymire},
   doi		= {10.1239/aap/1035227993},
   url		= {https://doi.org/10.1239/aap/1035227993}
+}
+
+@Book{		  logan:13:applied,
+  author	= {Logan, J. David},
+  title		= {Applied mathematics},
+  edition	= {Fourth},
+  publisher	= {John Wiley \& Sons, Inc., Hoboken, NJ},
+  year		= {2013},
+  pages		= {xvi+658},
+  isbn		= {978-1-118-47580-5},
+  mrclass	= {00A69 (00A73 35-01 76-01)},
+  mrnumber	= {3237684}
 }
 
 @Article{	  loh.sun.ea:21:on,
