--- a/All.bib
+++ b/All.bib
@@ -2559,24 +2559,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {Stochastic heat equation with multiplicative
-		  fractional-colored noise},
-  journal	= {J. Theoret. Probab.},
-  fjournal	= {Journal of Theoretical Probability},
-  volume	= {23},
-  year		= {2010},
-  number	= {3},
-  pages		= {834--870},
-  issn		= {0894-9840},
-  mrclass	= {60H15 (60G22 60H05)},
-  mrnumber	= {2679959},
-  mrreviewer	= {David Nualart},
-  doi		= {10.1007/s10959-009-0237-3},
-  url		= {https://doi.org/10.1007/s10959-009-0237-3}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {The stochastic wave equation with fractional noise: a
 		  random field approach},
   journal	= {Stochastic Process. Appl.},
@@ -2591,6 +2573,24 @@
   mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
   doi		= {10.1016/j.spa.2010.08.006},
   url		= {https://doi.org/10.1016/j.spa.2010.08.006}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {Stochastic heat equation with multiplicative
+		  fractional-colored noise},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {23},
+  year		= {2010},
+  number	= {3},
+  pages		= {834--870},
+  issn		= {0894-9840},
+  mrclass	= {60H15 (60G22 60H05)},
+  mrnumber	= {2679959},
+  mrreviewer	= {David Nualart},
+  doi		= {10.1007/s10959-009-0237-3},
+  url		= {https://doi.org/10.1007/s10959-009-0237-3}
 }
 
 @Article{	  balan.zamfirescu:06:strong,
@@ -6822,22 +6822,7 @@
   url		= {https://doi.org/10.1007/s11118-008-9092-6}
 }
 
-@InCollection{	  cairoli.dalang:95:optimal,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
-}
-
-@Article{	  cairoli.dalang:95:optimal*1,
+@Article{	  cairoli.dalang:95:optimal,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -6851,6 +6836,21 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
+}
+
+@InCollection{	  cairoli.dalang:95:optimal*1,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -8850,24 +8850,6 @@
 
 @Article{	  chen.dalang:15:moments,
   author	= {Chen, Le and Dalang, Robert C.},
-  title		= {Moments and growth indices for the nonlinear stochastic
-		  heat equation with rough initial conditions},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {43},
-  year		= {2015},
-  number	= {6},
-  pages		= {3006--3051},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60 60G60)},
-  mrnumber	= {3433576},
-  mrreviewer	= {Mathew Joseph},
-  doi		= {10.1214/14-AOP954},
-  url		= {https://doi.org/10.1214/14-AOP954}
-}
-
-@Article{	  chen.dalang:15:moments*1,
-  author	= {Chen, Le and Dalang, Robert C.},
   title		= {Moments, intermittency and growth indices for the
 		  nonlinear fractional stochastic heat equation},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
@@ -8883,6 +8865,24 @@
   mrreviewer	= {Jan I. Seidler},
   doi		= {10.1007/s40072-015-0054-x},
   url		= {https://doi.org/10.1007/s40072-015-0054-x}
+}
+
+@Article{	  chen.dalang:15:moments*1,
+  author	= {Chen, Le and Dalang, Robert C.},
+  title		= {Moments and growth indices for the nonlinear stochastic
+		  heat equation with rough initial conditions},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {43},
+  year		= {2015},
+  number	= {6},
+  pages		= {3006--3051},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60 60G60)},
+  mrnumber	= {3433576},
+  mrreviewer	= {Mathew Joseph},
+  doi		= {10.1214/14-AOP954},
+  url		= {https://doi.org/10.1214/14-AOP954}
 }
 
 @Article{	  chen.deya.ea:21:moment,
@@ -10558,24 +10558,6 @@
 }
 
 @Article{	  conus.joseph.ea:13:on,
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
-  title		= {On the chaotic character of the stochastic heat equation,
-		  before the onset of intermitttency},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {41},
-  year		= {2013},
-  number	= {3B},
-  pages		= {2225--2260},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60)},
-  mrnumber	= {3098071},
-  mrreviewer	= {Sergey V. Lototsky},
-  doi		= {10.1214/11-AOP717},
-  url		= {https://doi.org/10.1214/11-AOP717}
-}
-
-@Article{	  conus.joseph.ea:13:on*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {On the chaotic character of the stochastic heat equation,
@@ -10592,6 +10574,24 @@
   mrreviewer	= {Sergey V. Lototsky},
   doi		= {10.1007/s00440-012-0434-3},
   url		= {https://doi.org/10.1007/s00440-012-0434-3}
+}
+
+@Article{	  conus.joseph.ea:13:on*1,
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
+  title		= {On the chaotic character of the stochastic heat equation,
+		  before the onset of intermitttency},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {41},
+  year		= {2013},
+  number	= {3B},
+  pages		= {2225--2260},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {3098071},
+  mrreviewer	= {Sergey V. Lototsky},
+  doi		= {10.1214/11-AOP717},
+  url		= {https://doi.org/10.1214/11-AOP717}
 }
 
 @Article{	  conus.joseph.ea:14:initial,
@@ -10908,23 +10908,6 @@
 }
 
 @Article{	  corwin.ghosal.ea:20:stochastic,
-  author	= {Corwin, Ivan and Ghosal, Promit and Matetski, Konstantin},
-  title		= {Stochastic {PDE} limit of the dynamic {ASEP}},
-  journal	= {Comm. Math. Phys.},
-  fjournal	= {Communications in Mathematical Physics},
-  volume	= {380},
-  year		= {2020},
-  number	= {3},
-  pages		= {1025--1089},
-  issn		= {0010-3616},
-  mrclass	= {60H15 (60K35)},
-  mrnumber	= {4179723},
-  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
-  doi		= {10.1007/s00220-020-03905-y},
-  url		= {https://doi.org/10.1007/s00220-020-03905-y}
-}
-
-@Article{	  corwin.ghosal.ea:20:stochastic*1,
   author	= {Corwin, Ivan and Ghosal, Promit and Shen, Hao and Tsai,
 		  Li-Cheng},
   title		= {Stochastic {PDE} limit of the six vertex model},
@@ -10939,6 +10922,23 @@
   mrnumber	= {4091508},
   doi		= {10.1007/s00220-019-03678-z},
   url		= {https://doi.org/10.1007/s00220-019-03678-z}
+}
+
+@Article{	  corwin.ghosal.ea:20:stochastic*1,
+  author	= {Corwin, Ivan and Ghosal, Promit and Matetski, Konstantin},
+  title		= {Stochastic {PDE} limit of the dynamic {ASEP}},
+  journal	= {Comm. Math. Phys.},
+  fjournal	= {Communications in Mathematical Physics},
+  volume	= {380},
+  year		= {2020},
+  number	= {3},
+  pages		= {1025--1089},
+  issn		= {0010-3616},
+  mrclass	= {60H15 (60K35)},
+  mrnumber	= {4179723},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  doi		= {10.1007/s00220-020-03905-y},
+  url		= {https://doi.org/10.1007/s00220-020-03905-y}
 }
 
 @Article{	  corwin.ghosal.ea:21:kpz,
@@ -11449,22 +11449,6 @@
 }
 
 @Article{	  corwin:16:kardar-parisi-zhang,
-  author	= {Corwin, Ivan},
-  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
-		  {MR}3445162]},
-  journal	= {Eur. Math. Soc. Newsl.},
-  fjournal	= {European Mathematical Society. Newsletter},
-  number	= {101},
-  year		= {2016},
-  pages		= {19--27},
-  issn		= {1027-488X},
-  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
-  mrnumber	= {3526310},
-  doi		= {10.4171/news/101/6},
-  url		= {https://doi.org/10.4171/news/101/6}
-}
-
-@Article{	  corwin:16:kardar-parisi-zhang*1,
   author	= {Corwin, I.},
   title		= {Kardar-{P}arisi-{Z}hang universality},
   journal	= {Notices Amer. Math. Soc.},
@@ -11479,6 +11463,22 @@
   mrreviewer	= {Flora Koukiou},
   doi		= {10.1090/noti1334},
   url		= {https://doi.org/10.1090/noti1334}
+}
+
+@Article{	  corwin:16:kardar-parisi-zhang*1,
+  author	= {Corwin, Ivan},
+  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
+		  {MR}3445162]},
+  journal	= {Eur. Math. Soc. Newsl.},
+  fjournal	= {European Mathematical Society. Newsletter},
+  number	= {101},
+  year		= {2016},
+  pages		= {19--27},
+  issn		= {1027-488X},
+  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
+  mrnumber	= {3526310},
+  doi		= {10.4171/news/101/6},
+  url		= {https://doi.org/10.4171/news/101/6}
 }
 
 @Article{	  corwin:18:commentary,
@@ -12466,22 +12466,7 @@
   url		= {https://doi.org/10.1214/21-EJP589}
 }
 
-@InCollection{	  dalang.leveque:04:second-order,
-  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
-  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
-		  boundary noises},
-  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
-		  {A}pplications {IV}},
-  series	= {Progr. Probab.},
-  volume	= {58},
-  pages		= {83--93},
-  publisher	= {Birkh\"{a}user, Basel},
-  year		= {2004},
-  mrclass	= {60H15 (35L10 35R60)},
-  mrnumber	= {2096282}
-}
-
-@Article{	  dalang.leveque:04:second-order*1,
+@Article{	  dalang.leveque:04:second-order,
   author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
   title		= {Second-order linear hyperbolic {SPDE}s driven by isotropic
 		  {G}aussian noise on a sphere},
@@ -12497,6 +12482,21 @@
   mrreviewer	= {Anna Karczewska},
   doi		= {10.1214/aop/1079021472},
   url		= {https://doi.org/10.1214/aop/1079021472}
+}
+
+@InCollection{	  dalang.leveque:04:second-order*1,
+  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
+  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
+		  boundary noises},
+  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
+		  {A}pplications {IV}},
+  series	= {Progr. Probab.},
+  volume	= {58},
+  pages		= {83--93},
+  publisher	= {Birkh\"{a}user, Basel},
+  year		= {2004},
+  mrclass	= {60H15 (35L10 35R60)},
+  mrnumber	= {2096282}
 }
 
 @Article{	  dalang.leveque:06:second-order,
@@ -13128,9 +13128,7 @@
   author	= {Dalang, Robert C.},
   title		= {Corrections to: ``{E}xtending the martingale measure
 		  stochastic integral with applications to spatially
-		  homogeneous s.p.d.e.'s'' [{E}lectron {J}. {P}robab. {\bf 4}
-		  (1999), no. 6, 29 pp. (electronic); {MR}1684157
-		  (2000b:60132)]},
+		  homogeneous s.p.d.e.'s''},
   journal	= {Electron. J. Probab.},
   fjournal	= {Electronic Journal of Probability},
   volume	= {6},
@@ -13281,24 +13279,6 @@
 
 @Article{	  dalang:88:on,
   author	= {Dalang, Robert C.},
-  title		= {On stopping points in the plane that lie on a unique
-		  optional increasing path},
-  journal	= {Stochastics},
-  fjournal	= {Stochastics},
-  volume	= {24},
-  year		= {1988},
-  number	= {3},
-  pages		= {245--268},
-  issn		= {0090-9491},
-  mrclass	= {60G07 (90C40)},
-  mrnumber	= {972476},
-  mrreviewer	= {Nicholas Frangos},
-  doi		= {10.1080/17442508808833517},
-  url		= {https://doi.org/10.1080/17442508808833517}
-}
-
-@Article{	  dalang:88:on*1,
-  author	= {Dalang, Robert C.},
   title		= {On infinite perfect graphs and randomized stopping points
 		  on the plane},
   journal	= {Probab. Theory Related Fields},
@@ -13313,6 +13293,24 @@
   mrreviewer	= {U. Krengel},
   doi		= {10.1007/BF00334200},
   url		= {https://doi.org/10.1007/BF00334200}
+}
+
+@Article{	  dalang:88:on*1,
+  author	= {Dalang, Robert C.},
+  title		= {On stopping points in the plane that lie on a unique
+		  optional increasing path},
+  journal	= {Stochastics},
+  fjournal	= {Stochastics},
+  volume	= {24},
+  year		= {1988},
+  number	= {3},
+  pages		= {245--268},
+  issn		= {0090-9491},
+  mrclass	= {60G07 (90C40)},
+  mrnumber	= {972476},
+  mrreviewer	= {Nicholas Frangos},
+  doi		= {10.1080/17442508808833517},
+  url		= {https://doi.org/10.1080/17442508808833517}
 }
 
 @Article{	  dalang:89:optimal,
@@ -13361,7 +13359,7 @@
   issn		= {1083-6489},
   mrclass	= {60H05 (35R60 60G15 60G48 60H15)},
   mrnumber	= {1684157},
-  mrreviewer	= {Marta Sanz Sol\'{e}},
+  mrreviewer	= {Marta Sanz Sol'{e}},
   doi		= {10.1214/EJP.v4-43},
   url		= {https://doi.org/10.1214/EJP.v4-43}
 }
@@ -15199,6 +15197,21 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -15211,21 +15224,6 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -16398,20 +16396,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {III}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xvii+292},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698781}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {II}},
   note		= {Based on notes left by Harry Bateman, Reprint of the 1953
 		  original},
@@ -16421,6 +16405,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698780}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {III}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xvii+292},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698781}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -18847,6 +18845,24 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -18862,24 +18878,6 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -24978,6 +24976,21 @@
 
 @InCollection{	  its.tracy.ea:01:random,
   author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
+  title		= {Random words, {T}oeplitz determinants, and integrable
+		  systems. {I}},
+  booktitle	= {Random matrix models and their applications},
+  series	= {Math. Sci. Res. Inst. Publ.},
+  volume	= {40},
+  pages		= {245--258},
+  publisher	= {Cambridge Univ. Press, Cambridge},
+  year		= {2001},
+  mrclass	= {82B41 (05A99 37B99 37K10 47B35 60C05)},
+  mrnumber	= {1842789},
+  mrreviewer	= {Estelle L. Basor}
+}
+
+@InCollection{	  its.tracy.ea:01:random*1,
+  author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
   title		= {Random words, {T}oeplitz determinants and integrable
 		  systems. {II}},
   note		= {Advances in nonlinear mathematics and science},
@@ -24992,21 +25005,6 @@
   mrreviewer	= {Martin V. Hildebrand},
   doi		= {10.1016/S0167-2789(01)00171-3},
   url		= {https://doi.org/10.1016/S0167-2789(01)00171-3}
-}
-
-@InCollection{	  its.tracy.ea:01:random*1,
-  author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
-  title		= {Random words, {T}oeplitz determinants, and integrable
-		  systems. {I}},
-  booktitle	= {Random matrix models and their applications},
-  series	= {Math. Sci. Res. Inst. Publ.},
-  volume	= {40},
-  pages		= {245--258},
-  publisher	= {Cambridge Univ. Press, Cambridge},
-  year		= {2001},
-  mrclass	= {82B41 (05A99 37B99 37K10 47B35 60C05)},
-  mrnumber	= {1842789},
-  mrreviewer	= {Estelle L. Basor}
 }
 
 @InCollection{	  its:11:painleve,
@@ -28452,6 +28450,23 @@
   mrclass	= {35.62},
   mrnumber	= {0241822},
   mrreviewer	= {B. Frank Jones, Jr.}
+}
+
+@Article{	  lai:74:reproducing,
+  author	= {Lai, Tze Leung},
+  title		= {Reproducing kernel {H}ilbert spaces and the law of the
+		  iterated logarithm for {G}aussian processes},
+  journal	= {Z. Wahrscheinlichkeitstheorie und Verw. Gebiete},
+  fjournal	= {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und
+		  Verwandte Gebiete},
+  volume	= {29},
+  year		= {1974},
+  pages		= {7--19},
+  mrclass	= {60G15 (60F15)},
+  mrnumber	= {368121},
+  mrreviewer	= {Yu. M. Ryzhov},
+  doi		= {10.1007/BF00533181},
+  url		= {https://doi.org/10.1007/BF00533181}
 }
 
 @Book{		  landau.lifshitz:58:quantum,
@@ -32531,18 +32546,23 @@
   url		= {https://doi.org/10.1016/j.jmaa.2019.123737}
 }
 
-@Book{		  nane:06:iterated,
+@Article{	  nane:06:iterated,
   author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  title		= {Iterated {B}rownian motion in parabola-shaped domains},
+  journal	= {Potential Anal.},
+  fjournal	= {Potential Analysis. An International Journal Devoted to
+		  the Interactions between Potential Theory, Probability
+		  Theory, Geometry and Functional Analysis},
+  volume	= {24},
   year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
+  number	= {2},
+  pages		= {105--123},
+  issn		= {0926-2601},
+  mrclass	= {60J65},
+  mrnumber	= {2217416},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1007/s11118-005-2611-9},
+  url		= {https://doi.org/10.1007/s11118-005-2611-9}
 }
 
 @Article{	  nane:06:iterated*1,
@@ -32563,23 +32583,18 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Article{	  nane:06:iterated*2,
+@Book{		  nane:06:iterated*2,
   author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in parabola-shaped domains},
-  journal	= {Potential Anal.},
-  fjournal	= {Potential Analysis. An International Journal Devoted to
-		  the Interactions between Potential Theory, Probability
-		  Theory, Geometry and Functional Analysis},
-  volume	= {24},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
   year		= {2006},
-  number	= {2},
-  pages		= {105--123},
-  issn		= {0926-2601},
-  mrclass	= {60J65},
-  mrnumber	= {2217416},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1007/s11118-005-2611-9},
-  url		= {https://doi.org/10.1007/s11118-005-2611-9}
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -34739,6 +34754,21 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -34754,21 +34784,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -36011,19 +36026,6 @@
 
 @InProceedings{	  nualart:77:on,
   author	= {Nualart, David},
-  title		= {On the order convergence of stochastic processes},
-  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
-		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
-  pages		= {647--655},
-  publisher	= {Consejo Sup. Inv. Cient., Madrid},
-  year		= {1977},
-  mrclass	= {60G17 (60G07)},
-  mrnumber	= {581116},
-  mrreviewer	= {Evarist Gin\'{e}}
-}
-
-@InProceedings{	  nualart:77:on*1,
-  author	= {Nualart, David},
   title		= {On the convergence of martingales},
   booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
 		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
@@ -36033,6 +36035,19 @@
   mrclass	= {60G42},
   mrnumber	= {581115},
   mrreviewer	= {Dominique L\'{e}pingle}
+}
+
+@InProceedings{	  nualart:77:on*1,
+  author	= {Nualart, David},
+  title		= {On the order convergence of stochastic processes},
+  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
+		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
+  pages		= {647--655},
+  publisher	= {Consejo Sup. Inv. Cient., Madrid},
+  year		= {1977},
+  mrclass	= {60G17 (60G07)},
+  mrnumber	= {581116},
+  mrreviewer	= {Evarist Gin\'{e}}
 }
 
 @InCollection{	  nualart:79:decomposition,
@@ -36768,22 +36783,6 @@
 
 @Article{	  ondrejat:10:stochastic,
   author	= {Ondrej\'{a}t, Martin},
-  title		= {Stochastic nonlinear wave equations in local {S}obolev
-		  spaces},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {15},
-  year		= {2010},
-  pages		= {no. 33, 1041--1091},
-  mrclass	= {60H15},
-  mrnumber	= {2659757},
-  mrreviewer	= {Chunrong Feng},
-  doi		= {10.1214/EJP.v15-789},
-  url		= {https://doi.org/10.1214/EJP.v15-789}
-}
-
-@Article{	  ondrejat:10:stochastic*1,
-  author	= {Ondrej\'{a}t, Martin},
   title		= {Stochastic wave equation with critical nonlinearities:
 		  temporal regularity and uniqueness},
   journal	= {J. Differential Equations},
@@ -36797,6 +36796,22 @@
   mrnumber	= {2593599},
   doi		= {10.1016/j.jde.2009.12.010},
   url		= {https://doi.org/10.1016/j.jde.2009.12.010}
+}
+
+@Article{	  ondrejat:10:stochastic*1,
+  author	= {Ondrej\'{a}t, Martin},
+  title		= {Stochastic nonlinear wave equations in local {S}obolev
+		  spaces},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {15},
+  year		= {2010},
+  pages		= {no. 33, 1041--1091},
+  mrclass	= {60H15},
+  mrnumber	= {2659757},
+  mrreviewer	= {Chunrong Feng},
+  doi		= {10.1214/EJP.v15-789},
+  url		= {https://doi.org/10.1214/EJP.v15-789}
 }
 
 @InCollection{	  orantin:11:chain,
@@ -37312,6 +37327,22 @@
   mrreviewer	= {Miguel A. Arcones},
   doi		= {10.1007/978-1-4612-0537-1},
   url		= {https://doi.org/10.1007/978-1-4612-0537-1}
+}
+
+@InCollection{	  perkins:02:dawson-watanabe,
+  author	= {Perkins, Edwin},
+  title		= {Dawson-{W}atanabe superprocesses and measure-valued
+		  diffusions},
+  booktitle	= {Lectures on probability theory and statistics
+		  ({S}aint-{F}lour, 1999)},
+  series	= {Lecture Notes in Math.},
+  volume	= {1781},
+  pages		= {125--324},
+  publisher	= {Springer, Berlin},
+  year		= {2002},
+  mrclass	= {60G57 (60H15 60J80 60K35)},
+  mrnumber	= {1915445},
+  mrreviewer	= {Anton Wakolbinger}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -39358,6 +39389,22 @@
   url		= {https://doi.org/10.1017/CBO9781107590120}
 }
 
+@Article{	  romito:18:simple,
+  author	= {Romito, Marco},
+  title		= {A simple method for the existence of a density for
+		  stochastic evolutions with rough coefficients},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {23},
+  year		= {2018},
+  pages		= {Paper no. 113, 43},
+  mrclass	= {60H10 (34F05 60H07 60H15)},
+  mrnumber	= {3885546},
+  mrreviewer	= {Yong Chen},
+  doi		= {10.1214/18-EJP242},
+  url		= {https://doi.org/10.1214/18-EJP242}
+}
+
 @Article{	  rosen:90:random,
   author	= {Rosen, Jay},
   title		= {Random walks and intersection local time},
@@ -39515,22 +39562,7 @@
   url		= {https://doi.org/10.1080/17442500008834230}
 }
 
-@InCollection{	  rovira.tindel:01:sharp,
-  author	= {Rovira, C. and Tindel, S.},
-  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
-  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
-		  1998)},
-  series	= {Progr. Probab.},
-  volume	= {48},
-  pages		= {225--244},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2001},
-  mrclass	= {60H15 (60F10)},
-  mrnumber	= {1915457},
-  mrreviewer	= {Giambattista Giacomin}
-}
-
-@Article{	  rovira.tindel:01:sharp*1,
+@Article{	  rovira.tindel:01:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for the stochastic heat
 		  equation},
@@ -39548,6 +39580,21 @@
   mrreviewer	= {Zhongmin Qian},
   doi		= {10.1023/A:1011286304117},
   url		= {https://doi.org/10.1023/A:1011286304117}
+}
+
+@InCollection{	  rovira.tindel:01:sharp*1,
+  author	= {Rovira, C. and Tindel, S.},
+  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
+  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
+		  1998)},
+  series	= {Progr. Probab.},
+  volume	= {48},
+  pages		= {225--244},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2001},
+  mrclass	= {60H15 (60F10)},
+  mrnumber	= {1915457},
+  mrreviewer	= {Giambattista Giacomin}
 }
 
 @Article{	  rovira.tindel:05:on,
@@ -40896,24 +40943,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {I}. {P}arametrized
-		  independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {2},
-  pages		= {241--260},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1227034},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01192135},
-  url		= {https://doi.org/10.1007/BF01192135}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {II}.
 		  {N}onstationary independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -40928,6 +40957,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01199314},
   url		= {https://doi.org/10.1007/BF01199314}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {I}. {P}arametrized
+		  independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {2},
+  pages		= {241--260},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1227034},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01192135},
+  url		= {https://doi.org/10.1007/BF01192135}
 }
 
 @Article{	  seppalainen:94:large,
@@ -41340,21 +41387,7 @@
   url		= {https://doi.org/10.1007/s10955-011-0155-5}
 }
 
-@Article{	  sierocinski.zabczyk:89:on,
-  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
-  title		= {On a packing problem},
-  journal	= {Bull. Polish Acad. Sci. Math.},
-  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
-  volume	= {37},
-  year		= {1989},
-  number	= {1-6},
-  pages		= {305--313 (1990)},
-  issn		= {0239-7269},
-  mrclass	= {90C39 (90B99)},
-  mrnumber	= {1101484}
-}
-
-@InCollection{	  sierocinski.zabczyk:89:on*1,
+@InCollection{	  sierocinski.zabczyk:89:on,
   author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
   title		= {On a packing problem},
   booktitle	= {Stochastic systems and optimization ({W}arsaw, 1988)},
@@ -41367,6 +41400,20 @@
   mrnumber	= {1180793},
   doi		= {10.1007/BFb0002695},
   url		= {https://doi.org/10.1007/BFb0002695}
+}
+
+@Article{	  sierocinski.zabczyk:89:on*1,
+  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
+  title		= {On a packing problem},
+  journal	= {Bull. Polish Acad. Sci. Math.},
+  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
+  volume	= {37},
+  year		= {1989},
+  number	= {1-6},
+  pages		= {305--313 (1990)},
+  issn		= {0239-7269},
+  mrclass	= {90C39 (90B99)},
+  mrnumber	= {1101484}
 }
 
 @Book{		  simon:05:trace,
@@ -43008,6 +43055,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -43022,23 +43086,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
@@ -43061,6 +43108,23 @@
 
 @Article{	  tracy.widom:10:formulas,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {Formulas for joint probabilities for the asymmetric simple
+		  exclusion process},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {51},
+  year		= {2010},
+  number	= {6},
+  pages		= {063302, 10},
+  issn		= {0022-2488},
+  mrclass	= {82C22},
+  mrnumber	= {2675194},
+  doi		= {10.1063/1.3431977},
+  url		= {https://doi.org/10.1063/1.3431977}
+}
+
+@Article{	  tracy.widom:10:formulas*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {Formulas for {ASEP} with two-sided {B}ernoulli initial
 		  condition},
   journal	= {J. Stat. Phys.},
@@ -43075,23 +43139,6 @@
   mrreviewer	= {Dimitri Petritis},
   doi		= {10.1007/s10955-010-0013-x},
   url		= {https://doi.org/10.1007/s10955-010-0013-x}
-}
-
-@Article{	  tracy.widom:10:formulas*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {Formulas for joint probabilities for the asymmetric simple
-		  exclusion process},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {51},
-  year		= {2010},
-  number	= {6},
-  pages		= {063302, 10},
-  issn		= {0022-2488},
-  mrclass	= {82C22},
-  mrnumber	= {2675194},
-  doi		= {10.1063/1.3431977},
-  url		= {https://doi.org/10.1063/1.3431977}
 }
 
 @Article{	  tracy.widom:11:erratum,
